added h-card to contact
spruced up contact form formatting and added h-card format for better
SEO

moved floater instagram icons to the right side of the screen since
people read left to right and I want those to be easter eggs

fixed ios active link issue

--- a/css/layout copy.css
+++ b/css/layout copy.css
@@ -155,12 +155,12 @@ hr {
 
 /* #Links
 ================================================== */
-a, a:visited {
+a, a:visited, a:focus {
   color: #13241e;
   text-decoration: underline;
   outline: 0; }
 
-a:hover, a:focus {
+a:hover {
   color: #366756; }
 
 p a, p a:visited {
