--- a/css/layout.css
+++ b/css/layout.css
@@ -953,10 +953,11 @@ nav {
     color: #13241e; }
   #work-amsust .flat-button, #work-amsust .flat-button:visited {
     font-size: 21px;
-    color: #5fa3f7;
+    border-color: white;
     text-decoration: none; }
   #work-amsust .flat-button:hover, #work-amsust .flat-button:focus {
-    color: #13241e; }
+    color: #5fa3f7;
+    background: white; }
 
 .header-icon {
   text-align: center;
@@ -970,7 +971,6 @@ nav {
     text-align: center; }
   #skills .flat-button, #skills .flat-button:visited {
     font-size: 21px;
-    color: #f7b35f;
     text-decoration: none; }
   #skills .flat-button:hover, #skills .flat-button:focus {
     color: #13241e; }
@@ -995,17 +995,14 @@ nav {
     font-style: italic; }
   #blog .flat-button, #blog .flat-button:visited {
     font-size: 21px;
-    color: #f8f5ef;
-    text-decoration: none;
-    background: #13241e; }
+    text-decoration: none; }
   #blog .flat-button:hover, #blog .flat-button:focus {
-    color: #366756; }
+    color: #f8f5ef;
+    background: #13241e; }
 
 .flat-button {
   margin: 5px;
-  background: white;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
+  background: transparent;
   display: inline-block;
   padding: 8px;
   font-size: 17px;
@@ -1013,7 +1010,13 @@ nav {
   text-decoration: none;
   font-family: "Open Sans", sans-serif;
   color: #13241e;
-  font-weight: bold; }
+  font-weight: bold;
+  border: 4.95774px solid #13241e;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -ms-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out; }
   .flat-button .picto {
     font-family: 'modern_pictograms_proregular'; }
 
