emergency hot fix for cat parallax

--- a/css/layout.css
+++ b/css/layout.css
@@ -1022,7 +1022,7 @@ nav {
 
 footer#foot {
   padding: 3.236em 0;
-  background: #85878d;
+  background: #9d9fa3;
   text-align: center; }
   footer#foot .parallax {
     background: url("http://cdn.austinpray.com/static/img/cat_bg.jpg") 50% 0 no-repeat fixed; }
