--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -131,7 +131,7 @@ $parallax-h: 800px;
 	
 	.parallax {
 	background: url('http://cdn.austinpray.com/static/img/header_bg.jpg') 50% 0 no-repeat fixed;
-	background-position-y: -300px;
+	background-position: 50% -300px;
 	
 
 	}
@@ -535,10 +535,10 @@ footer#foot {
 ================================================== */
 @font-face {
     font-family: 'modern_pictograms_proregular';
-    src: url('http://cdn.austinpray.com/static/fonts/modernpictogramspro_2-webfont.eot');
-    src: url('http://cdn.austinpray.com/static/fonts/modernpictogramspro_2-webfont.eot?#iefix') format('embedded-opentype'),
-         url('http://cdn.austinpray.com/static/fonts/modernpictogramspro_2-webfont.woff') format('woff'),
-         url('http://cdn.austinpray.com/static/fonts/modernpictogramspro_2-webfont.ttf') format('truetype');
+    src: url('../css/modernpictogramspro_2-webfont.eot');
+    src: url('../css/modernpictogramspro_2-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../css/modernpictogramspro_2-webfont.woff') format('woff'),
+         url('../css/modernpictogramspro_2-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     
