--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -129,7 +129,7 @@ $footer-section: 	#34495e;
 
 /* #Links
 ================================================== */
-	a, a:visited,a:focus { color: $black; text-decoration: underline; outline: 0; }
+	a, a:visited,a:focus { color: $black; text-decoration: underline; outline: 0; @include transition (color 0.1s ease-in-out); }
 	a:hover  { color: lighten($black,20%); }
 	p a, p a:visited { line-height: inherit; }
 
