--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -219,11 +219,14 @@ nav {
 	}
 	
 	#logo {
-		-webkit-transition: all .223s ease-in-out;
+		/*
+-webkit-transition: all .223s ease-in-out;
 		-moz-transition: 	all .223s ease-in-out;
 		-ms-transition: 	all .223s ease-in-out;
 		-o-transition: 		all .223s ease-in-out;
 		transition: 		all .223s ease-in-out;
+*/
+		@include transition (all 0.1s ease-in-out);
 		opacity: 0;
 	    
 	    visibility: hidden;
