rearranged work section
rearranged work to above the graphic

updated meta description

changed white link hover color

--- a/css/layout.css
+++ b/css/layout.css
@@ -962,7 +962,7 @@ nav {
 .color-block-section a, .color-block-section a:visited, .color-block-section a:focus {
   color: white; }
 .color-block-section a:hover {
-  color: #cccccc; }
+  color: #bdc3c7; }
 .color-block-section img {
   max-width: 100%; }
 .color-block-section h1, .color-block-section h3, .color-block-section h2 {
