--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -40,7 +40,12 @@ h3 {
 }
 
 
-.parallax-item{position:absolute;z-index:5;top:40px;left:400px;}
+.parallax-item {
+	position:absolute;
+	z-index:5;
+	top:40px;
+	left:400px;
+}
 
 
 section.oven-mitt, nav.oven-mitt {
