--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -274,6 +274,7 @@ nav {
 		li {
 			display: inline-block;
 			a {
+				font-family: 'Open Sans', sans-serif;
 				text-decoration: none;
 				margin-right: 1em;
 				&:hover {
