--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -275,6 +275,7 @@ nav {
 			display: inline-block;
 			a {
 				font-family: 'Open Sans', sans-serif;
+				font-weight: 300;
 				text-decoration: none;
 				margin-right: 1em;
 				&:hover {
